# gRPC-attendance

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
attendance/: alembic.ini  main.py  server.py
attendance/alembic/: env.py
attendance/alembic/versions/: 2025_09_21_2024-ede5bd5a68be_create_uuid_v7_function.py  2025_09_21_2029-bc29891aa0ab_.py  2025_09_24_2124-f3e3aed178c4_.py  2025_09_24_2126-310dc112331c_.py  2025_09_24_2127-9ecec2f63348_.py  2025_09_24_2129-6cba3ce653b2_.py  2025_09_24_2129-d9c5317b5568_.py  2025_09_24_2155-fbca957c7b7c_.py  2025_09_24_2156-50db68d94aa6_.py  2025_09_24_2157-b503ff89d87e_.py  2025_09_24_2158-6335d8159560_.py  2025_09_24_2158-e34f0ce0dac8_.py  2025_10_05_1503-cb90676788e1_create_uuid_v7_function.py  2025_10_05_1504-07f372afabe2_.py  2025_10_05_1754-6dd94445089a_.py  2025_10_11_1352-6da4903fe407_.py  2025_10_11_1417-8f67cb320fc2_.py  2025_10_11_2108-6701385d7eda_.py  2025_10_12_1507-1933a66cd3fe_.py  2025_10_12_1733-43443837afb2_.py  2025_10_12_1754-8e0eb92ba6ce_.py  2025_10_12_1828-cbabc931c583_.py  (+2 more)
attendance/core/: config.py
attendance/services/: user.py
attendance/utils/: user.py
backend/: .env.template  README.md  docker-compose.yaml  main.py  pyproject.toml  server.py
backend/alembic/: env.py
backend/api/v1/: users.py  (+2 more)
backend/core/: config.py
backend/services/: base.py  grpc_errors.py  lesson.py  student.py  teacher.py  user.py
backend/templates/: user.html
backend/utils/: dt.py  grpc_errors.py  lesson.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
(+157 files in other folders)
